bin scripts update

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node devServer.js",
-    "test": ""
+    "test": "mocha test.js --recursive src/*.test.js src/**/*.test.js src/**/**/*.test.js"
   },
   "repository": {
     "type": "git",
